# cryptonight

./: .gitignore  CMakeLists.txt  README.md
src/: lib.cpp  lib.h  main.cpp  xmrig.h
src/crypto/: Algorithm.cpp  Algorithm.h  CryptoNight_arm.h  CryptoNight_constants.h  CryptoNight_x86.h  keccak.cpp
src/utils/: Mem.cpp  Mem.h  Mem_unix.cpp
